[tool.poetry]
name = "model_toolkit"
version = "0.1.0"
description = "Tools and models for Data Science"
authors = ["Jorge Hernandez"]

[tool.poetry.dependencies]
python = "3.9.*"
pyodbc = "4.0.32"
sqlalchemy = "1.4.41"
pandas = "1.3.4"
regex = "2022.3.2"
scikit-learn = "1.1.3"
tensorflow = "2.10.0"
matplotlib = "3.5.1"
numpy = "1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
